--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "axios": "^0.21.1",
+    "react-file-reader": "^1.1.4",
     "react-images-upload": "^1.2.8"
   }
 }
