--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^0.21.1",
     "react-file-reader": "^1.1.4",
     "react-images-upload": "^1.2.8",
-    "react-super-responsive-table": "^5.2.0"
+    "react-super-responsive-table": "^5.2.0",
+    "material-ui-chip-input":"^1.1.0"
   }
 }
